<resources>
    <string name="app_name">VP</string>
    <string name="sign_in">Авторизация</string>
    <string name="to_sign_up_button">Зарегистрировать</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="to_sign_in">Авторизоваться</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="fio">FIO</string>
    <string name="menu">Меню</string>
    <string name="main">Главная</string>
    <string name="vote">Голосование</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Корзина</string>
    <string name="order">Заказ</string>
</resources>