<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <Button
        android:id="@+id/sign_up"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginBottom="248dp"
        android:text="@string/to_sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginBottom="151dp"
        android:background="@color/teal_200"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <EditText
        android:id="@+id/fio_field"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:background="@color/teal_200"
        android:hint="@string/fio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_label" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="@color/teal_200"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fio_field" />

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/fio_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>